--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
+    "react-open-weather": "^1.3.2",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
+    "recharts": "^2.12.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
