--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "healthier",
+  "name": "healthiers",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -7,23 +7,22 @@
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.15",
     "@mui/material": "^5.15.15",
-    "@mui/styles": "^5.15.15",
     "@reduxjs/toolkit": "^2.2.3",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "formik": "^2.4.5",
-    "lucide-react": "^0.350.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-icons": "^5.0.1",
-    "react-open-weather": "^1.3.2",
-    "react-redux": "^9.1.0",
+    "firebase": "^10.11.0",
+    "install": "^0.13.0",
+    "lucide-react": "^0.368.0",
+    "npm": "^10.5.2",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "react-icons": "^5.1.0",
+    "react-redux": "^9.1.1",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
-    "recharts": "^2.12.2",
-    "web-vitals": "^2.1.4",
-    "yup": "^1.4.0"
+    "recharts": "^2.12.5",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -50,6 +49,6 @@
     ]
   },
   "devDependencies": {
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.3"
   }
 }
